borsh-derive/src/internals/deserialize/structs/snapshots/check_deserialize_with_attr-2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserializeAsync for A<K, V>
where
    K: borsh::de::BorshDeserializeAsync,
    V: borsh::de::BorshDeserializeAsync,
{
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(Self {
            x: <ThirdParty<
                K,
                V,
            > as borsh::BorshDeserializeAsync>::deserialize_reader(reader)
                .await?,
            y: <u64 as borsh::BorshDeserializeAsync>::deserialize_reader(reader).await?,
        })
    }
}
