borsh-derive/src/internals/deserialize/structs/snapshots/generic_deserialize_async_bound.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<T: Debug, U> borsh::de::BorshDeserialize for C<T, U>
where
    T: borsh::de::BorshDeserialize,
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(Self {
            a: <String as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            b: <HashMap<T, U> as borsh::BorshDeserialize>::deserialize_reader(reader)?,
        })
    }
}
