borsh-derive/src/internals/deserialize/structs/snapshots/generic_named_fields_struct_borsh_skip-2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserializeAsync for G<K, V, U>
where
    U: borsh::de::BorshDeserializeAsync,
    K: ::core::default::Default,
    V: ::core::default::Default,
{
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(Self {
            x: ::core::default::Default::default(),
            y: <U as borsh::BorshDeserializeAsync>::deserialize_reader(reader).await?,
        })
    }
}
