borsh-derive/src/internals/deserialize/structs/snapshots/generic_tuple_struct_borsh_skip2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserialize for G<K, V, U>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: ::core::default::Default,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(
            Self(
                <HashMap<K, V> as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                ::core::default::Default::default(),
            ),
        )
    }
}
